--- a/ext-protobuf/base-proto-pom/pom.xml
+++ b/ext-protobuf/base-proto-pom/pom.xml
@@ -15,6 +15,7 @@
     <description>Base Parent pom extension for Protobuf</description>
 
     <properties>
+        <frtu.lib.version>1.1.0-SNAPSHOT</frtu.lib.version>
         <!--===========================-->
         <!--https://github.com/protocolbuffers/protobuf/tree/v3.11.0/java-->
         <protobuf.version>3.11.0</protobuf.version>
