Clean up archetype and remove ext-protobuf lib for now

--- a/ext-protobuf/pom.xml
+++ b/ext-protobuf/pom.xml
@@ -15,8 +15,8 @@
 
     <modules>
         <module>base-proto-pom</module>
-        <module>library-proto-meta</module>
-        <module>archetype-proto-project</module>
+        <!--        <module>library-proto-meta</module>-->
+        <!--        <module>archetype-proto-project</module>-->
     </modules>
 
     <properties>
