--- a/ext-avro/base-avro-pom/pom.xml
+++ b/ext-avro/base-avro-pom/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>com.github.frtu.governance</groupId>
     <artifactId>base-avro-pom</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Base Parent pom extension for Avro</name>
@@ -22,8 +22,8 @@
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <confluent.version>5.0.0</confluent.version>
         <!--https://github.com/frtu/governance-toolbox#hortonworks-schema-registry-->
-        <frtu.governance.version>1.1.0</frtu.governance.version>
-        <frtu.lib.version>1.1.0</frtu.lib.version>
+        <frtu.governance.version>1.1.1-SNAPSHOT</frtu.governance.version>
+        <frtu.lib.version>1.1.1-SNAPSHOT</frtu.lib.version>
         <!--===========================-->
     </properties>
     <dependencyManagement>
