--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.github.frtu.governance</groupId>
     <artifactId>master-pom</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Governance toolbox</name>
@@ -51,7 +51,7 @@
         <connection>scm:git:git@github.com:frtu/governance-toolbox.git</connection>
         <developerConnection>scm:git:git@github.com:frtu/governance-toolbox.git</developerConnection>
         <url>https://github.com/frtu/governance-toolbox/tree/master</url>
-        <tag>v1.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
